--- a/galerij.html
+++ b/galerij.html
@@ -13,9 +13,9 @@
             <h1>De Zandhaas</h1>
             <nav>
                 <ul>
-                    <li><a href="C:\Users\rober\OneDrive\Documenten\NHA Opleiding\H8&9Huiswerk\index.html">Index</a></li>
-                    <li><a href="C:\Users\rober\OneDrive\Documenten\NHA Opleiding\H8&9Huiswerk\galerij.html">Galerij</a></li>
-                    <li><a href="C:\Users\rober\OneDrive\Documenten\NHA Opleiding\H8&9Huiswerk\info.html">Info</a></li>
+                    <li><a href="index.html">Index</a></li>
+                    <li><a href="galerij.html">Galerij</a></li>
+                    <li><a href="info.html">Info</a></li>
                 </ul>
             </nav>
         </header>
