--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="8">
         <title>Wegpagina over attractie molen De Zandhaas</title>
         <meta name="description" content="Molen De Zandhaas bezoekerspagina">
-        <meta name="keywords" content="">
+        <meta name="keywords" content="attractie, molen, Santpoort-Noord">
     </head>    
     <body>
         <header>
