--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
         <meta charset="8">
         <title>Wegpagina over attractie molen De Zandhaas</title>
         <meta name="description" content="Molen De Zandhaas bezoekerspagina">
-        <meta name="keywords" content="">
+        <meta name="keywords" content="attractie, molen, Santpoort-Noord, bezoekersinformatie">
     </head>
     <body>
         <header>
